# bpc-simulador-deontico

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONVENCOES.md  DECISOES-CONCEITUAIS.md  MAPA-AUDITORIA.md  README.md  pyproject.toml
.githooks/: pre-commit
api/: main.py  requirements.txt
dominios/decisao/: README.md  maccormick_justificacao.py
dominios/decisao/tests/: test_maccormick_justificacao.py
dominios/emenda/: __init__.py  diff_impacto.py  exclusoes_renda.py  grade_casos_tipo.py  grafo_dominios.py
dominios/emenda/tests/: test_emenda.py
dominios/grafo/: README.md  bpc_grafo_ciclomatico.py
dominios/grafo/tests/: test_grafo_ciclomatico.py
dominios/impacto/: README.md  SLOT-DADOS-BEPS.md  ancoras.json  impacto.py
dominios/impacto/tests/: test_impacto.py
dominios/norma/: NORMA-DEONTICA-BPC.md  bpc_art20_00caput_publico.py  bpc_art20_p01_familia.py  bpc_art20_p02_impedimento.py  bpc_art20_p03_renda.py  bpc_art20_p04_vedacao.py  bpc_art20_p11_miserabilidade.py  bpc_conclusao_deontica.py
dominios/norma/appscript/: README.md  SLOT-GS-KALYL.md  bpc.gs
dominios/norma/tests/: test_bpc.py  test_logica_fechada.py
dominios/valoracao/: README.md  alexy_formula_peso.py  muller_programa_ambito.py  prompts.py  valoracao.py
dominios/valoracao/fixtures/: 001-gabarito.json  001-sentenca.md  002-gabarito.json  002-sentenca.md  003-gabarito.json  003-sentenca.md  004-gabarito.json  README.md  (+3 more)
fixtures/sentencas-bpc/: README.md
oficina/: NOTA.md  hibrido.py
pesquisa/: 01-formalizacao-deontica-bpc.md  02-ux-jurista-placeholders.md  03-simulador-impacto-art201.md  SPEC-SIMULADOR-DEONTICO-BPC.md
scripts/: check-citacoes.mjs  sync-citacoes.mjs
ui/: IDENTIDADE-OBSERVASOCIAL.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/marca/: CORES.md  README.md
ui/src/: App.jsx  CasoContext.jsx  api.js  citacoes.js  index.css  lexico.js
(+35 files in other folders)
